# game-of-flife

./: Cargo.toml
src/: main.rs  tick.cl
